script/k8s/localstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: localstack
  labels:
    helm.sh/chart: localstack-0.3.7
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: localstack
      app.kubernetes.io/instance: localstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: localstack
        app.kubernetes.io/instance: localstack
    spec:
      serviceAccountName: localstack
      containers:
        - name: localstack
          image: "localstack/localstack:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: edge
              containerPort: 4566
              protocol: TCP
            - name: es
              containerPort: 4571
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "0.5"
              memory: "200Mi"
