script/k8s/localstack/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: localstack
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    name: localstack
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      name: localstack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      labels:
        name: localstack
    spec:
      containers:
        - env:
            - name: DATA_DIR
              value: ' '
            - name: DEBUG
              value: ' '
            - name: DOCKER_HOST
              value: unix:///var/run/docker.sock
            - name: HOST_TMP_FOLDER
              value: /tmp/localstack
            - name: LAMBDA_EXECUTOR
              value: ' '
            - name: LOCALSTACK_HOST
              value: http://localstack.localstack:4566
            - name: SERVICES
              value: "dynamodb:31001"
          image: localstack-errbot:latest
          imagePullPolicy: Never # since we are using a local image in minikube
          name: localstack
          ports:
            - containerPort: 31001
            - containerPort: 4566
            - containerPort: 4571
          resources:
            limits:
              cpu: "2"
              memory: "8Gi"
            requests:
              cpu: "1"
              memory: "400Mi"
          volumeMounts:
            - mountPath: /tmp/localstack
              name: localstack-claim0
            - mountPath: /var/run/docker.sock
              name: localstack-claim1
      restartPolicy: Always
      volumes:
        - name: localstack-claim0
          persistentVolumeClaim:
            claimName: localstack-claim0
        - name: localstack-claim1
          persistentVolumeClaim:
            claimName: localstack-claim1
