script/k8s/localstack/localstack.yaml
---
# Source: localstack/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: localstack
  labels:
    helm.sh/chart: localstack-0.3.7
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - name: edge
      port: 4566
      targetPort: 4566
      nodePort: 31566
    - name: es
      port: 4571
      targetPort: 4571
      nodePort: 31571
  selector:
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
---
# Source: localstack/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: localstack
  labels:
    helm.sh/chart: localstack-0.3.7
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: localstack
      app.kubernetes.io/instance: localstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: localstack
        app.kubernetes.io/instance: localstack
    spec:
      serviceAccountName: localstack
      containers:
        - name: localstack
          image: "localstack/localstack:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: edge
              containerPort: 4566
              protocol: TCP
            - name: es
              containerPort: 4571
              protocol: TCP
          # livenessProbe:
          #   failureThreshold: 3
          #   initialDelaySeconds: 0
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          #   httpGet:
          #     path: /health
          #     port: edge
          # readinessProbe:
          #   failureThreshold: 3
          #   initialDelaySeconds: 0
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          #   httpGet:
          #     path: /health
          #     port: edge
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "0.5"
              memory: "200Mi"
