script/k8s/localstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: localstack
  labels:
    helm.sh/chart: localstack-0.3.7
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - name: edge
      port: 4566
      targetPort: 4566
      nodePort: 31566
    - name: es
      port: 4571
      targetPort: 4571
      nodePort: 31571
  selector:
    app.kubernetes.io/name: localstack
    app.kubernetes.io/instance: localstack
