script/k8s/localstack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localstack
spec: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: localstack
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
