script/k8s/localstack/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: localstack-network-policy
  namespace: localstack
spec:
  podSelector:
    matchLabels:
      name: localstack
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: errbot
    - podSelector:
        matchLabels:
          name: errbot
    ports:
    - protocol: TCP
      port: 4566
